# sku

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/server/: Dockerfile.dev  README.md  pyproject.toml
apps/server/src/: celery_app.py  config.py  db.py  job_queue.py  logging_utils.py  main.py  models.py  schemas.py  seed_demo.py  worker.py
apps/server/src/controllers/: __init__.py  analytics.py  billing.py  diagnosis.py  health.py  ingestion.py  merchant_readiness.py  router.py  shopify.py
apps/server/src/repositories/: __init__.py  analytics.py  billing.py  diagnosis.py  feedback.py  installations.py
apps/server/src/security/: __init__.py  shopify.py
apps/server/src/services/: __init__.py  ai.py  analysis.py  billing.py  card_review.py  diagnosis.py  feedback.py  gemini.py  ingest_auth.py  ingestion.py  integration_health.py  job_dispatch.py  onboarding.py  (+6 more)
apps/server/tests/: conftest.py  test_ai_service.py  test_billing.py  test_branding_metadata.py  test_config.py  test_controller_modules.py  test_db.py  test_demo_seed.py  test_diagnosis.py  test_flat_src_layout.py  test_health.py  test_hmac_webhook.py  test_ingest_auth_service.py  test_ingestion_and_rollups.py  test_integration_health.py  test_leaderboard.py  test_logging_utils.py  test_merchant_readiness.py  test_models.py  test_product_analysis.py  test_request_context.py  test_shop_installations.py  test_shopify_hmac.py  test_shopify_service.py  test_worker_module.py
(+73 files in other folders)
